fixing lists spacing

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ html {
 
 body {
 	background-color: var(--stone-100);
+	font-size: 1.6rem;
 }
 
 /* ---------- COLORS ---------- */
@@ -70,7 +71,7 @@ li {
 /* ---------- REUSABLE COMPONENTS ---------- */
 
 .bold {
-	font-weight: 700;
+	font-weight: 600;
 }
 
 .container {
@@ -80,7 +81,7 @@ li {
 
 .line {
 	width: 100%;
-	outline: 0.1rem solid var(--stone-150);
+	outline: 0.01rem solid var(--stone-150);
 }
 
 /* ---------- CARD  ---------- */
@@ -90,13 +91,15 @@ li {
 	gap: 4rem;
 	padding: 4rem;
 	margin-block: 12.8rem;
+	border: none;
 	border-radius: 2.4rem;
 	background-color: var(--white);
 }
 
 .top-image {
 	max-width: 100%;
-	height: 30rem;
+	height: auto;
+	border: none;
 	border-radius: 1.2rem;
 }
 
@@ -140,7 +143,7 @@ li::marker {
 }
 
 .instructions li::marker {
-	font-weight: 700;
+	font-weight: 600;
 }
 
 li {
